2007-04-30  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_limits/limits.conf: Address space limit is KB.
	* modules/pam_limits/limits.conf.5.xml: Likewise.
	Reported by Thomas Vander Stichele <thomas@apestaart.org>.

	* modules/pam_mail/pam_mail.c (_do_mail): Remove duplicate
	check for PAM_SILENT and don't bail out if it is set [#1706247].

2007-03-29  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_access/pam_access.c (login_access, list_match):
	Replace strtok with strtok_r.
	* modules/pam_cracklib/pam_cracklib.c (check_old_password):
	Likewise.
	* modules/pam_ftp/pam_ftp.c (lookup, pam_authenticate):
	Likewise.
	* modules/pam_unix/pam_unix_passwd.c (check_old_password,
	save_old_password): Likewise.

	* modules/pam_limits/Makefile.am: Define limits.d dir and install it.
	* modules/pam_limits/pam_limits.8.xml: Describe limits.d parsing.
	* modules/pam_limits/pam_limits.c (pam_limit_s): Make conf_file ptr.
	(pam_parse): conf_file is now ptr.
	(pam_sm_open_session): Add parsing files from limits.d subdir using
	glob, change pl to pointer.

2007-03-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/ar.po: New translation.
	* po/ca.po: Likewise.
	* po/da.po: Likewise.
	* po/ru.po: Likewise.
	* po/sv.po: Likewise.
	* po/zu.po: Likewise.
	* po/LINGUAS: Add ar, ca, da, ru, sv, zu

	* po/hu.po: Update translation.

2007-02-21  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/unix_chkpwd.c (_unix_verify_password): Test for
	allocation failure in bigcrypt().

	* modules/pam_unix/pam_unix_passwd.c (pam_sm_chauthtok): Allow
	modification of '*' password by root.

2007-02-06  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_loginuid/pam_loginuid.c (set_loginuid): Remove
	debug syslog message when loginuid doesn't exist.

2007-02-01  Tomas Mraz  <t8m@centrum.cz>

	* xtests/tst-pam_unix3.c: Fix typos in comments.

	* modules/pam_unix/support.c (_unix_verify_password): Explicitly
	disallow '!' in the beginning of password hash. Treat only