@@ -7,3 +7,6 @@ tst-pam_dispatch2
 tst-pam_dispatch3
 tst-pam_dispatch4
 tst-pam_cracklib1
+tst-pam_unix1
+tst-pam_unix2
+tst-pam_unix3
